# Algorifms

./: .gitignore  README.md
Algorithms/: .gitignore
Algorithms/AdditionM3/: CMakeLists.txt  bitap.cpp  subseq_3_template.cpp
Algorithms/Contest1-pyramidal-sorting/: CMakeLists.txt
Algorithms/Contest1-pyramidal-sorting/task1/: main.cpp
Algorithms/Contest1/task2/: main.cpp
Algorithms/Contest10-generation-of-combinatorial-objects/: task1.cpp  task4.cpp
Algorithms/Contest10-generation-of-combinatorial-objects-part1/: CMakeLists.txt  task2.cpp  task3.cpp
Algorithms/Contest11-generation-of-combinatorial-objects-part2/: CMakeLists.txt  task1-placement-with-repetitions.cpp  task2.cpp  task3-combinations-with-repetitions.cpp  task4-splitting.cpp
Algorithms/Contest12-reducing-the-search-of-all-options/: CMakeLists.txt  task1-places.cpp  task2-AStar.cpp  task3-sieve-of-Eratosthenes.cpp
Algorithms/Contest13-dancing-links-algorithm/: CMakeLists.txt  qwee  tmp.cpp
Algorithms/Contest13-dancing-links-algorithm/task1-matrix-for-dancing-links/: ReadWriter.h  task1-matrix-for-dancing-links.cpp
Algorithms/Contest13-dancing-links-algorithm/task2-dancing-links-algo/: ReadWriter.h  task2-dancing-links-algo.cpp
Algorithms/Contest13-dancing-links-algorithm/task3-first-counter-task/: ReadWriter.h  task3-first-counter-task.cpp
Algorithms/Contest14-graphs/: CMakeLists.txt  task1.cpp  task2.cpp
Algorithms/Contest15-oriented-graphs/: CMakeLists.txt  task1.cpp  task2.cpp
Algorithms/Contest16-minimal-spanning-tree/: CMakeLists.txt
Algorithms/Contest16-minimal-spanning-tree/task1-boruvka-algorithm/: main.cpp
Algorithms/Contest16-minimal-spanning-tree/task2-prim-algorithm/: main.cpp
Algorithms/Contest16-minimal-spanning-tree/task3-kruskal-algorithm/: main.cpp
Algorithms/Contest2/: CMakeLists.txt
Algorithms/Contest2-suick-sort/task1/: qs_main.cpp
Algorithms/Contest3-merge-sort/: CMakeLists.txt  main.cpp
Algorithms/Contest3-merge-sort/task1-merge-sort/: MergeSort.h  main.cpp
Algorithms/Contest3-merge-sort/task2/: main.cpp
Algorithms/Contest4/: CMakeLists.txt  task_.cpp
Algorithms/Contest4-encoding-algorithms/: task1-haffman.cpp  task2-fano.cpp
Algorithms/Contest5/: CMakeLists.txt  borders_template.cpp  substr_template_mp.cpp
Algorithms/Contest5-search-substrings/: substr_template.cpp
Algorithms/Contest6-dictionary-coding/: CMakeLists.txt
Algorithms/Contest7/: CMakeLists.txt  task1.cpp
Algorithms/Contest7-strings-similarity/: task2.cpp  task3.cpp  test.cpp
Algorithms/Contest8/: CMakeLists.txt
Algorithms/Contest8-dynamic-programming/: CMakeLists.txt  saw.cpp
Algorithms/Contest9-dynamic-programming-part2/: CMakeLists.txt  test.cpp
Algorithms/Contest9-dynamic-programming-part2/task1-stones/: task1-stones.cpp
Algorithms/Contest9-dynamic-programming-part2/task2-knapsack/: task2-knapsack.cpp
Algorithms/Contest9-dynamic-programming-part2/task3-greedy-knapsack/: task3-greedy-knapsack.cpp
Algorithms/Contest9-dynamic-programming-part2/task4-knight/: task4-knight.cpp
Algorithms/KDZ1/: README.md  Отчет.docx  Таблица.xlsx
Algorithms/KDZ1/src/: CMakeLists.txt  FileEncoder.h  entropy.cpp  nsimb.cpp  timing.cpp
Algorithms/KDZ1/src/LZ77/: LZ77Encoder.cpp  LZ77Encoder.h
Algorithms/KDZ1/src/TableEncoders/: TableEncoder.cpp  TableEncoder.h
Algorithms/KDZ1/src/TableEncoders/Fano/: FanoEncoder.cpp  FanoEncoder.h
Algorithms/KDZ1/src/TableEncoders/Huffman/: HuffmanEncoder.cpp  HuffmanEncoder.h
Algorithms/KDZ1/tests/: CMakeLists.txt  FanoTests.cpp  HuffmanTests.cpp  LZ77Tests.cpp
DataStructures/BTree/: CMakeLists.txt
DataStructures/BTree/tests/: CMakeLists.txt  adapters1_tests.cpp  btree1_tests.cpp  btree_student_test_NotMine.cpp  btree_student_tests.cpp  individual.h
DataStructures/BTree/tests/tests_output/: Insert2.xibt  Insert3.xibt  SearchAll2.xibt  SearchAll3.xibt  student_insertNonFull_leaf.xibt  student_insertNonFull_node.xibt  student_searsh.xibt
DataStructures/BrokenDNA/tests/: CMakeLists.txt  LinkedList_tests.cpp  Mish_LinkedList.cpp  Misha_DNAElement.cpp
DataStructures/CppPoint/: CMakeLists.txt
DataStructures/CppPoint/tests/: CMakeLists.txt  point_array_test.cpp  point_test.cpp
DataStructures/CyberPolice/src/: CMakeLists.txt  JournalNetActivity.h  JournalNetActivity.hpp  NetActivity.cpp  NetActivity.h  OrderedList.h  OrderedList.hpp  SkipList.h  SkipList.hpp  TimeStamp.cpp  TimeStamp.h  main.cpp  stdafx.h
DataStructures/EnhList/tests/: BidiLinkedListIterator_Student_Test.cpp  BidiLinkedList_Stas_Test.cpp  BidiLinkedList_Student_Test.cpp  CMakeLists.txt  bidi_linked_list_test.cpp
DataStructures/EuropeByRails/tests/: CMakeLists.txt  priority_queue_Stas_tests.cpp  priority_queue_student_tests.cpp  rail_system_Stas_tests.cpp  rail_system_student_tests.cpp
DataStructures/RedBlackTree/: my.gv
DataStructures/RedBlackTree/tests/: CMakeLists.txt  def_dumper.h  individual.h  rbtree_prv1_test.cpp  rbtree_pub1_test.cpp
DataStructures/RedBlackTree/tests/tests_results/: Insert1_step_000.gv  Insert1_step_001.gv  Insert1_step_002.gv  Insert1_step_003.gv  Insert1_step_004.gv  Insert1_step_005.gv  Insert1_step_006.gv  Insert1_step_007.gv  Insert1_step_008.gv  Insert1_step_009.gv  Insert1_step_010.gv  Insert1_step_011.gv  Insert1_step_012.gv  Insert1_step_013.gv  InsertNewBstEl1.gv  LeftRot1After.gv  LeftRot1Before.gv  LeftRot2After.gv  RightRot1After.gv  RightRot2After.gv  dump_#_0000.gv  dump_#_0001.gv  dump_#_0002.gv  dump_#_0003.gv  dump_#_0004.gv  dump_#_0005.gv  dump_#_0006.gv  dump_#_0007.gv  dump_#_0008.gv  dump_#_0009.gv  dump_#_0010.gv  dump_#_0011.gv  dump_#_0012.gv  dump_#_0013.gv  dump_#_0014.gv  dump_#_0015.gv  dump_#_0016.gv  dump_#_0017.gv  dump_#_0018.gv  dump_#_0019.gv  (+25 more)
DataStructures/SafeArray/tests/: CMakeLists.txt  safearray_test.cpp  subject_test.cpp
DataStructures/SpellChecking/: CMakeLists.txt
DataStructures/StackMachine/tests/: CMakeLists.txt  int_stack_test.cpp  stack_machine_test.cpp
DataStructures/SumOfItsParts/tests/: CMakeLists.txt  NameContainer_Student_Tests.cpp  Part_Student_Tests.cpp
(+75 files in other folders)
