cmake_minimum_required(VERSION 3.9)
project(Contest3)

set(CMAKE_CXX_STANDARD 11)

add_executable(Contest3
#        task1/main.cpp
#        task1/MergeSort.h
#        task1/ReadWriter.h
        task2/main.cpp
        task2/ReadWriter.h
        task2/Solver.h
        task2/Student_and_Ski.h
        )
